--- a/home.html
+++ b/home.html
@@ -199,7 +199,7 @@
       </div>
       <div class="profile-box">
         <img src="assets/home/kafka-icon.jpg" class="profile-image">
-        <p class="profile-text">kitsune / 15 / ♂</p>
+        <p class="profile-text">kitsune / 15 / ♀</p>
         <p style="margin: 0px; text-align: left;">
           <strong>loc:</strong> Paraná, BR<br>
           <strong>status:</strong> <a href="https://www.imood.com/users/kitsuneislife" target="_blank"><img
